修改包名，解决配置文件乱码

--- a/server-caller/src/main/resources/application.properties
+++ b/server-caller/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-##服务端口
+##鏈嶅姟绔彛
 #server.port=8092
-##服务名称
+##鏈嶅姟鍚嶇О
 #spring.application.name=server-caller
-##注册中心地址
+##娉ㄥ唽涓績鍦板潃
 #eureka.client.service-url.defaultZone=http://localhost:8090/eureka/
 #eureka.instance.prefer-ip-address=true
