--- a/server-provider/src/main/resources/application.properties
+++ b/server-provider/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-##服务端口
+##鏈嶅姟绔彛
 #server.port=8091
 #server.servlet.context-path=/gmall
-##服务名称
+##鏈嶅姟鍚嶇О
 #spring.application.name=server-provider
-##注册中心地址
+##娉ㄥ唽涓績鍦板潃
 #eureka.client.service-url.defaultZone=http://localhost:8090/eureka/
 #eureka.instance.prefer-ip-address=true
-#扫描MyBatis的xml文件
+#鎵弿MyBatis鐨剎ml鏂囦欢
 #mybatis.mapper-locations=classpath:mapper/*.xml
-# 控制台打印SQL
+# 鎺у埗鍙版墦鍗癝QL
 #logging.level.com.example.serverprovider.mapper=debug
