--- a/server-provider/src/main/resources/log4j.properties
+++ b/server-provider/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=info,console,fileAppender,dailyRollingFile,errorAppender
 ###设置dubbo日志##
 #log4j.logger.com.alibaba.dubbo = info
 ###设置SQL###
-log4j.logger.com.example.demo.mapper=debug
+log4j.logger.com.example.server.provider.mapper=debug
 #定时任务日志打印级别
 log4j.logger.org.springframework.scheduling=INFO
 #关闭Spring日志
