--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-##·şÎñ¶Ë¿Ú
+##æœåŠ¡ç«¯å£
 #server.port=8090
-##×¢²áÖĞĞÄµÄÃû×Ö
+##æ³¨å†Œä¸­å¿ƒçš„åå­—
 #spring.application.name=eureka
-##eurekaÏà¹ØÅäÖÃ
+##eurekaç›¸å…³é…ç½®
 #eureka.instance.hostname=localhost
-##ÅäÖÃ¹Ø±Õ×ÔÎÒ±£»¤£¬²¢°´ĞèÅäÖÃEureka ServerÇåÀíÎŞĞ§½ÚµãµÄÊ±¼ä¼ä¸ô£¨5000ms£©
+##é…ç½®å…³é—­è‡ªæˆ‘ä¿æŠ¤ï¼Œå¹¶æŒ‰éœ€é…ç½®Eureka Serveræ¸…ç†æ— æ•ˆèŠ‚ç‚¹çš„æ—¶é—´é—´éš”ï¼ˆ5000msï¼‰
 #eureka.server.enable-self-preservation=false
 #eureka.server.eviction-interval-timer-in-ms=5000
-##ÓÉÓÚ¸ÃÓ¦ÓÃÎª×¢²áÖĞĞÄ£¬ËùÒÔÉèÖÃÎªfalse ´ú±í²»Ïò×¢²áÖĞĞÄ×¢²á×Ô¼º
+##ç”±äºè¯¥åº”ç”¨ä¸ºæ³¨å†Œä¸­å¿ƒï¼Œæ‰€ä»¥è®¾ç½®ä¸ºfalse ä»£è¡¨ä¸å‘æ³¨å†Œä¸­å¿ƒæ³¨å†Œè‡ªå·±
 #eureka.client.register-with-eureka=false
-##ÓÉÓÚ×¢²áÖĞĞÄµÄÖ°Ôğ¾ÍÊÇÎ¬»¤·şÎñÊµÀı£¬Ëü²¢²»ĞèÒªÈ¥¼ìË÷·şÎñ£¬ËùÒÔÎªfalse
+##ç”±äºæ³¨å†Œä¸­å¿ƒçš„èŒè´£å°±æ˜¯ç»´æŠ¤æœåŠ¡å®ä¾‹ï¼Œå®ƒå¹¶ä¸éœ€è¦å»æ£€ç´¢æœåŠ¡ï¼Œæ‰€ä»¥ä¸ºfalse
 #eureka.client.fetch-registry=false
-##×¢²áÖĞĞÄµÄµØÖ·
+##æ³¨å†Œä¸­å¿ƒçš„åœ°å€
 #eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
