遗漏的提交

--- a/server-provider/src/main/resources/application.properties
+++ b/server-provider/src/main/resources/application.properties
@@ -9,4 +9,4 @@
 #扫描MyBatis的xml文件
 #mybatis.mapper-locations=classpath:mapper/*.xml
 # 控制台打印SQL
-#logging.level.com.example.serverprovider.mapper=debug
+#logging.level.com.example.server.provider.mapper=debug
